@@ -11,10 +11,14 @@ import com.linkedin.common.*;
 import com.linkedin.common.urn.Urn;
 import com.linkedin.common.urn.UrnUtils;
 import com.linkedin.datahub.graphql.QueryContext;
+import com.linkedin.datahub.graphql.generated.AbsoluteTimeWindowInput;
 import com.linkedin.datahub.graphql.generated.Assertion;
 import com.linkedin.datahub.graphql.generated.AssertionActionInput;
 import com.linkedin.datahub.graphql.generated.AssertionActionType;
 import com.linkedin.datahub.graphql.generated.AssertionActionsInput;
+import com.linkedin.datahub.graphql.generated.AssertionAdjustmentSettingsInput;
+import com.linkedin.datahub.graphql.generated.AssertionExclusionWindowInput;
+import com.linkedin.datahub.graphql.generated.AssertionMonitorSensitivityInput;
 import com.linkedin.datahub.graphql.generated.CronScheduleInput;
 import com.linkedin.datahub.graphql.generated.DatasetFilterInput;
 import com.linkedin.datahub.graphql.generated.DatasetFilterType;
@@ -39,15 +43,18 @@ import com.linkedin.monitor.AssertionEvaluationParametersType;
 import com.linkedin.monitor.AssertionEvaluationSpec;
 import com.linkedin.monitor.AssertionEvaluationSpecArray;
 import com.linkedin.monitor.AssertionMonitor;
+import com.linkedin.monitor.AssertionMonitorSettings;
 import com.linkedin.monitor.DatasetFreshnessAssertionParameters;
 import com.linkedin.monitor.MonitorInfo;
 import com.linkedin.monitor.MonitorMode;
 import com.linkedin.monitor.MonitorStatus;
 import com.linkedin.monitor.MonitorType;
 import com.linkedin.r2.RemoteInvocationException;
+import com.linkedin.timeseries.AbsoluteTimeWindow;
 import graphql.schema.DataFetchingEnvironment;
 import io.datahubproject.metadata.context.OperationContext;
 import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.CompletionException;
 import org.mockito.Mockito;
 import org.testng.annotations.Test;
@@ -57,16 +64,38 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
   private static final Urn TEST_DATASET_URN =
       UrnUtils.getUrn("urn:li:dataset:(urn:li:dataPlatform:hive,name,PROD)");
   private static final Urn TEST_ASSERTION_URN = UrnUtils.getUrn("urn:li:assertion:test");
-  private static final Urn TEST_ACTOR_URN = UrnUtils.getUrn("urn:li:actor:test");
+  private static final Urn TEST_ACTOR_URN = UrnUtils.getUrn("urn:li:corpuser:test");
 
   private static final Urn TEST_MONITOR_URN =
       UrnUtils.getUrn(String.format("urn:li:monitor:(%s,test)", TEST_DATASET_URN));
+
+  private static final long TEST_TIMESTAMP = 1234567890L;
 
   private static final String TEST_EXECUTOR_ID = "testExecutorId";
   private static final UpsertDatasetFreshnessAssertionMonitorInput TEST_INPUT =
       new UpsertDatasetFreshnessAssertionMonitorInput(
           TEST_DATASET_URN.toString(),
           "description",
+          true,
+          AssertionAdjustmentSettingsInput.builder()
+              .setAlgorithm(com.linkedin.datahub.graphql.generated.AdjustmentAlgorithm.CUSTOM)
+              .setAlgorithmName("custom")
+              .setTrainingDataLookbackWindowDays(10)
+              .setExclusionWindows(
+                  List.of(
+                      AssertionExclusionWindowInput.builder()
+                          .setDisplayName("baller")
+                          .setType(
+                              com.linkedin.datahub.graphql.generated.AssertionExclusionWindowType
+                                  .FIXED_RANGE)
+                          .setFixedRange(
+                              AbsoluteTimeWindowInput.builder()
+                                  .setStartTimeMillis(0L)
+                                  .setEndTimeMillis(1L)
+                                  .build())
+                          .build()))
+              .setSensitivity(AssertionMonitorSensitivityInput.builder().setLevel(1).build())
+              .build(),
           new FreshnessAssertionScheduleInput(
               FreshnessAssertionScheduleType.CRON,
               new FreshnessCronScheduleInput("* * * * *", "America / Los Angeles", null),
@@ -85,6 +114,8 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
       new UpsertDatasetFreshnessAssertionMonitorInput(
           null,
           "description",
+          null,
+          null,
           new FreshnessAssertionScheduleInput(
               FreshnessAssertionScheduleType.CRON,
               new FreshnessCronScheduleInput("* * * * *", "America / Los Angeles", null),
@@ -104,6 +135,8 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
           new UpsertDatasetFreshnessAssertionMonitorInput(
               "urn:li:dataset:(urn:li:dataPlatform:hive,another_name,PROD)",
               "description",
+              null,
+              null,
               new FreshnessAssertionScheduleInput(
                   FreshnessAssertionScheduleType.CRON,
                   new FreshnessCronScheduleInput("* * * * *", "America / Los Angeles", null),
@@ -123,11 +156,8 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
           .setType(AssertionType.FRESHNESS)
           .setSource(
               new AssertionSource()
-                  .setType(AssertionSourceType.NATIVE)
-                  .setCreated(
-                      new AuditStamp()
-                          .setTime(System.currentTimeMillis())
-                          .setActor(TEST_ACTOR_URN)))
+                  .setType(AssertionSourceType.INFERRED)
+                  .setCreated(new AuditStamp().setTime(TEST_TIMESTAMP).setActor(TEST_ACTOR_URN)))
           .setFreshnessAssertion(
               new FreshnessAssertionInfo()
                   .setEntity(TEST_DATASET_URN)
@@ -192,8 +222,25 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
           .setType(MonitorType.ASSERTION)
           .setAssertionMonitor(
               new AssertionMonitor()
-                  .setAssertions(
-                      new AssertionEvaluationSpecArray(ImmutableList.of(evaluationSpec))))
+                  .setAssertions(new AssertionEvaluationSpecArray(ImmutableList.of(evaluationSpec)))
+                  .setSettings(
+                      new AssertionMonitorSettings()
+                          .setAdjustmentSettings(
+                              new AssertionAdjustmentSettings()
+                                  .setAlgorithm(com.linkedin.assertion.AdjustmentAlgorithm.CUSTOM)
+                                  .setAlgorithmName("custom")
+                                  .setTrainingDataLookbackWindowDays(10)
+                                  .setSensitivity(new AssertionMonitorSensitivity().setLevel(1))
+                                  .setExclusionWindows(
+                                      new AssertionExclusionWindowArray(
+                                          List.of(
+                                              new AssertionExclusionWindow()
+                                                  .setType(AssertionExclusionWindowType.FIXED_RANGE)
+                                                  .setFixedRange(
+                                                      new AbsoluteTimeWindow()
+                                                          .setStartTimeMillis(0L)
+                                                          .setEndTimeMillis(1L))
+                                                  .setDisplayName("baller")))))))
           .setStatus(new MonitorStatus().setMode(MonitorMode.ACTIVE))
           .setExecutorId(TEST_EXECUTOR_ID);
 
@@ -205,7 +252,7 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
     GraphClient graphClient = Mockito.mock(GraphClient.class);
     UpsertDatasetFreshnessAssertionMonitorResolver resolver =
         new UpsertDatasetFreshnessAssertionMonitorResolver(
-            assertionService, monitorService, graphClient);
+            assertionService, monitorService, graphClient, () -> TEST_TIMESTAMP);
 
     // Execute resolver
     QueryContext mockContext = getMockAllowContext();
@@ -230,7 +277,7 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
             Mockito.eq(TEST_ASSERTION_INFO.getFreshnessAssertion().getSchedule()),
             Mockito.eq(TEST_ASSERTION_INFO.getFreshnessAssertion().getFilter()),
             Mockito.eq(TEST_ASSERTION_ACTIONS),
-            Mockito.isNull());
+            Mockito.eq(TEST_ASSERTION_INFO.getSource()));
 
     // Validate that we created the monitor
     Mockito.verify(monitorService, Mockito.times(1))
@@ -243,7 +290,8 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
             Mockito.eq(
                 TEST_MONITOR_INFO.getAssertionMonitor().getAssertions().get(0).getParameters()),
             Mockito.eq(TEST_MONITOR_INFO.getStatus().getMode()),
-            Mockito.eq(TEST_MONITOR_INFO.getExecutorId()));
+            Mockito.eq(TEST_MONITOR_INFO.getExecutorId()),
+            Mockito.eq(TEST_MONITOR_INFO.getAssertionMonitor().getSettings()));
   }
 
   @Test
@@ -254,7 +302,7 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
     GraphClient graphClient = Mockito.mock(GraphClient.class);
     UpsertDatasetFreshnessAssertionMonitorResolver resolver =
         new UpsertDatasetFreshnessAssertionMonitorResolver(
-            assertionService, monitorService, graphClient);
+            assertionService, monitorService, graphClient, () -> TEST_TIMESTAMP);
 
     // Execute resolver
     QueryContext mockContext = getMockAllowContext();
@@ -273,7 +321,8 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
                 Mockito.eq(
                     TEST_MONITOR_INFO.getAssertionMonitor().getAssertions().get(0).getParameters()),
                 Mockito.eq(TEST_MONITOR_INFO.getStatus().getMode()),
-                Mockito.eq(TEST_MONITOR_INFO.getExecutorId())))
+                Mockito.eq(TEST_MONITOR_INFO.getExecutorId()),
+                Mockito.eq(TEST_MONITOR_INFO.getAssertionMonitor().getSettings())))
         .thenThrow(RemoteInvocationException.class);
 
     assertThrows(CompletionException.class, () -> resolver.get(mockEnv).join());
@@ -288,7 +337,7 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
             Mockito.eq(TEST_ASSERTION_INFO.getFreshnessAssertion().getSchedule()),
             Mockito.eq(TEST_ASSERTION_INFO.getFreshnessAssertion().getFilter()),
             Mockito.eq(TEST_ASSERTION_ACTIONS),
-            Mockito.isNull());
+            Mockito.eq(TEST_ASSERTION_INFO.getSource()));
 
     // Validate that we deleted the assertion
     Mockito.verify(assertionService, Mockito.times(1))
@@ -391,7 +440,7 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
     GraphClient graphClient = initMockGraphClient();
     UpsertDatasetFreshnessAssertionMonitorResolver resolver =
         new UpsertDatasetFreshnessAssertionMonitorResolver(
-            assertionService, monitorService, graphClient);
+            assertionService, monitorService, graphClient, () -> TEST_TIMESTAMP);
 
     // Execute resolver
     QueryContext mockContext = getMockAllowContext();
@@ -429,7 +478,8 @@ public class UpsertDatasetFreshnessAssertionMonitorResolverTest {
             Mockito.eq(evaluationSpec.getSchedule()),
             Mockito.eq(evaluationSpec.getParameters()),
             Mockito.eq(MonitorMode.ACTIVE),
-            Mockito.eq(TEST_EXECUTOR_ID));
+            Mockito.eq(TEST_EXECUTOR_ID),
+            Mockito.eq(TEST_MONITOR_INFO.getAssertionMonitor().getSettings()));
   }
 
   private GraphClient initMockGraphClient() {
